IF(MITK_BUILD_IGT)
  INCLUDE_DIRECTORIES(${MITK_IGT_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(${PLUGIN_TARGET} mitkIGT)
  MACRO_CREATE_QMITK_PLUGIN()
ELSE(MITK_BUILD_IGT)
  MESSAGE(SEND_ERROR "The plug-in ${BUNDLE-SYMBOLICNAME} depends on MITK-IGT. Set the MITK_BUILD_IGT variable to ON.")
ENDIF(MITK_BUILD_IGT)
