INCLUDE_DIRECTORIES(IGTFilters IGTTrackingDevices)
IF(MITK_USE_MICRON_TRACKER)
  INCLUDE_DIRECTORIES(${MITK_MICRON_TRACKER_INCLUDE_DIR})
ENDIF(MITK_USE_MICRON_TRACKER)
IF(MITK_USE_MICROBIRD_TRACKER)
  INCLUDE_DIRECTORIES(${MITK_USE_MICROBIRD_TRACKER_INCLUDE_DIR})
ENDIF(MITK_USE_MICROBIRD_TRACKER)

CREATE_CORE_LIB()

## create IGT config
CONFIGURE_FILE(mitkIGTConfig.h.in ${PROJECT_BINARY_DIR}/mitkIGTConfig.h @ONLY)

# add test programm for serial communication classADD_EXECUTABLE(SerialCommunicationTest IGTTrackingDevices/mitkSerialCommunicationTest.cpp)TARGET_LINK_LIBRARIES(SerialCommunicationTest mitkIGT mitkCore tinyxml) 

ADD_EXECUTABLE (IGTTutorialStep1 IGTTutorial/IGTTutorialStep1.cpp)
TARGET_LINK_LIBRARIES(IGTTutorialStep1 mitkIGT mitkCore tinyxml)





