INCLUDE(files.cmake)
FIND_PACKAGE(GLUT)
IF(NOT GLUT_FOUND)
  MESSAGE("GLUT is required for MITK rendering")
ENDIF(NOT GLUT_FOUND)
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})
ADD_LIBRARY(mitkRendering ${RENDERING_CPP})
TARGET_LINK_LIBRARIES(mitkRendering ${LIBRARIES_FOR_${KITNAME}_CORE} pic2vtk IIL4MITK ${GLUT_LIBRARIES})

