FIND_PACKAGE(GLUT)
IF(NOT GLUT_FOUND)
  MESSAGE("GLUT is required for MITK rendering")
ENDIF(NOT GLUT_FOUND)
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})
FIND_PACKAGE(OpenGL)
IF(NOT OPENGL_FOUND)
  MESSAGE("GL is required for MITK rendering")
ENDIF(NOT OPENGL_FOUND )
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
CREATE_CORE_LIB()
TARGET_LINK_LIBRARIES(mitkRendering pic2vtk IIL4MITK ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})

